# inputmonitor

./: .travis.yml  LICENSE  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  inputmonitor.c
src/: Makefile.am  Makefile.in  inputmonitor.c
src/.deps/: inputmonitor.Po
